kubernetes/PostgreSQL_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  annotations:
    argocd.argoproj.io/sync-wave: "0" 
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
